--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         const CONFIG = {
           // Your Google Sheet ID (from the URL)
           // Example: https://docs.google.com/spreadsheets/d/SHEET_ID_HERE/edit
-          GOOGLE_SHEET_ID: 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQLpvkMpxkUy4J1cwo73YFasDCUoF8b1OVLd4_xFkd2iiD4hm_4kVXjKn9uyPyWUFpg-Yrs09sxaf0t/pub?output=csv',
+          GOOGLE_SHEET_ID: '17loO452it-qoRcwNKp5nbZg0exuBRZt794sTOmrkwEY',
           
           // Your password
           PASSWORD: 'packaging2024',
