--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           GOOGLE_SHEET_ID: '17loO452it-qoRcwNKp5nbZg0exuBRZt794sTOmrkwEY',
           
           // Your password
-          PASSWORD: 'packaging2024',
+          PASSWORD: 'test',
           
           // Base URL for images (Google Drive folder or other hosting)
           // Images will be loaded as: {IMAGE_BASE_URL}/{factory}/{itemNumber}.jpg
