--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           // Base URL for images (Google Drive folder or other hosting)
           // Images will be loaded as: {IMAGE_BASE_URL}/{factory}/{itemNumber}.jpg
           // Example: "https://drive.google.com/uc?export=view&id=FOLDER_ID"
-          IMAGE_BASE_URL: 'https://github.com/josephkimkuma/packaging_catalog/main/images/',
+          IMAGE_BASE_URL: 'https://raw.githubusercontent.com/josephkimkuma/packaging_catalog/main/images',
           
           // Image file extension
           IMAGE_EXTENSION: '.jpg',
