--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           // Factory folder mapping (customize based on your suppliers/factories)
           // This maps supplier names to folder names
           FACTORY_FOLDERS: {
-            'Taesung': 'taesung',
+            'taesung': 'Taesung',
             'Supplier B': 'factory-b',
             'Supplier C': 'factory-c',
             // Add more as needed
