--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                 <div className="grid md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6">
                   {filteredProducts.map(p => (
                     <div key={p.id} className="bg-white rounded-lg shadow hover:shadow-md transition overflow-hidden">
-                      <div className="bg-gray-50 overflow-hidden rounded-t-lg flex items-center justify-center" style={{ height: '300px' }}>
+                      <div className="bg-white overflow-hidden rounded-t-lg flex items-center justify-center" style={{ height: '300px' }}>
                         <img src={p.image} 
                           alt={p.name} 
                           className="max-w-full max-h-full object-contain p-4"
