--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       .sidebar { width: 240px; flex-shrink: 0; }
       .main-content { flex: 1; min-width: 0; }
       .product-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 32px; }
-      .product-card { background: white; border-radius: 8px; overflow: hidden; transition: transform 0.2s; }
+      .product-card { background: white; border-radius: 8px; overflow: hidden; transition: transform 0.2s; display: flex; flex-direction: column; }
       .product-card:hover { transform: translateY(-4px); }
-      .product-image { height: 320px; background: white; display: flex; align-items: center; justify-content: center; padding: 24px; }
+      .product-image { aspect-ratio: 1; background: white; display: flex; align-items: center; justify-content: center; padding: 24px; }
       .product-image img { max-width: 100%; max-height: 100%; object-fit: contain; }
       .filter-group { margin-bottom: 32px; }
       .filter-label { font-size: 13px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.5px; color: #666; margin-bottom: 12px; }
@@ -27,9 +27,9 @@
       .filter-option.active { color: #000; font-weight: 600; }
       .search-box { width: 100%; padding: 12px 16px; border: 1px solid #ddd; border-radius: 6px; font-size: 15px; font-family: 'Inter', sans-serif; }
       .search-box:focus { outline: none; border-color: #999; }
-      .product-info { padding: 20px; }
-      .product-name { font-size: 16px; font-weight: 600; color: #000; margin-bottom: 8px; }
-      .product-meta { font-size: 13px; color: #666; line-height: 1.6; }
+      .product-info { padding: 16px; flex: 1; }
+      .product-name { font-size: 15px; font-weight: 600; color: #000; margin-bottom: 6px; }
+      .product-meta { font-size: 12px; color: #666; line-height: 1.5; }
       .header { border-bottom: 1px solid #e5e5e5; padding: 20px 0; background: white; position: sticky; top: 0; z-index: 100; }
       .logo { font-size: 20px; font-weight: 700; color: #000; }
       .logout-btn { padding: 8px 16px; border: 1px solid #ddd; border-radius: 6px; background: white; cursor: pointer; font-size: 14px; font-weight: 500; }
