--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
         overflow: hidden; 
         transition: transform 0.2s; 
         display: flex; 
-        flex-direction: column; 
-        height: 400px;
+        flex-direction: column;
       }
       .product-card:hover { transform: translateY(-4px); }
       .product-image { 
@@ -53,10 +52,10 @@
       .filter-option.active { color: #000; font-weight: 600; }
       .search-box { width: 100%; padding: 12px 16px; border: 1px solid #ddd; border-radius: 6px; font-size: 15px; font-family: 'Inter', sans-serif; }
       .search-box:focus { outline: none; border-color: #999; }
-      .product-info { padding: 14px; flex: 1; display: flex; flex-direction: column; overflow: hidden; }
+      .product-info { padding: 14px; display: flex; flex-direction: column; }
       .product-name { font-size: 14px; font-weight: 600; color: #000; margin-bottom: 3px; }
       .product-component { font-size: 12px; color: #333; margin-bottom: 8px; }
-      .product-meta { font-size: 11px; color: #666; line-height: 1.5; flex: 1; overflow: hidden; }
+      .product-meta { font-size: 11px; color: #666; line-height: 1.5; }
       .header { border-bottom: 1px solid #e5e5e5; padding: 20px 0; background: white; position: sticky; top: 0; z-index: 100; }
       .logo { font-size: 20px; font-weight: 700; color: #000; }
       .logout-btn { padding: 8px 16px; border: 1px solid #ddd; border-radius: 6px; background: white; cursor: pointer; font-size: 14px; font-weight: 500; }
