--- a/index.html
+++ b/index.html
@@ -11,65 +11,68 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
-      body { font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif; }
+      body { 
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif; 
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+      }
       .container { max-width: 1400px; margin: 0 auto; padding: 0 24px; }
-      .sidebar { width: 240px; flex-shrink: 0; }
+      .sidebar { width: 220px; flex-shrink: 0; }
       .sidebar-content { position: sticky; top: 100px; max-height: calc(100vh - 120px); overflow-y: auto; padding-right: 8px; }
       .sidebar-content::-webkit-scrollbar { width: 6px; }
       .sidebar-content::-webkit-scrollbar-track { background: #f1f1f1; border-radius: 3px; }
       .sidebar-content::-webkit-scrollbar-thumb { background: #ccc; border-radius: 3px; }
       .sidebar-content::-webkit-scrollbar-thumb:hover { background: #999; }
       .main-content { flex: 1; min-width: 0; }
-      .product-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 32px; }
+      .product-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap: 0; border-top: 1px solid #e0e0e0; }
       .product-card { 
-        background: white; 
-        border-radius: 8px; 
-        overflow: hidden; 
-        transition: transform 0.2s; 
-        display: flex; 
-        flex-direction: column;
+        border-right: 1px solid #e0e0e0;
+        border-bottom: 1px solid #e0e0e0;
+        transition: background-color 0.15s;
+        cursor: pointer;
       }
-      .product-card:hover { transform: translateY(-4px); }
+      .product-card:hover { background-color: #fafafa; }
       .product-image { 
-        height: 180px; 
+        height: 250px; 
         background: white; 
         display: flex; 
         align-items: center; 
         justify-content: center; 
-        padding: 12px; 
+        padding: 20px; 
         flex-shrink: 0;
       }
       .product-image img { max-width: 100%; max-height: 100%; object-fit: contain; }
-      .filter-group { margin-bottom: 32px; }
-      .filter-group-scrollable { max-height: 200px; overflow-y: auto; margin-top: 12px; padding-right: 8px; }
+      .filter-group { margin-bottom: 28px; }
+      .filter-group-scrollable { max-height: 200px; overflow-y: auto; margin-top: 8px; padding-right: 8px; }
       .filter-group-scrollable::-webkit-scrollbar { width: 4px; }
       .filter-group-scrollable::-webkit-scrollbar-track { background: #f5f5f5; border-radius: 2px; }
       .filter-group-scrollable::-webkit-scrollbar-thumb { background: #ddd; border-radius: 2px; }
       .filter-group-scrollable::-webkit-scrollbar-thumb:hover { background: #ccc; }
-      .filter-label { font-size: 13px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.5px; color: #666; margin-bottom: 12px; }
-      .filter-option { padding: 8px 0; cursor: pointer; color: #333; font-size: 15px; transition: color 0.2s; }
+      .filter-label { font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.8px; color: #999; margin-bottom: 8px; }
+      .filter-option { padding: 6px 0; cursor: pointer; color: #666; font-size: 14px; transition: color 0.15s; }
       .filter-option:hover { color: #000; }
-      .filter-option.active { color: #000; font-weight: 600; }
-      .search-box { width: 100%; padding: 12px 16px; border: 1px solid #ddd; border-radius: 6px; font-size: 15px; font-family: 'Inter', sans-serif; }
+      .filter-option.active { color: #000; font-weight: 500; }
+      .search-box { width: 100%; padding: 10px 12px; border: 1px solid #e0e0e0; border-radius: 4px; font-size: 14px; font-family: inherit; }
       .search-box:focus { outline: none; border-color: #999; }
-      .product-info { padding: 14px; display: flex; flex-direction: column; }
-      .product-name { font-size: 14px; font-weight: 600; color: #000; margin-bottom: 3px; }
-      .product-component { font-size: 12px; color: #333; margin-bottom: 8px; }
-      .product-meta { font-size: 11px; color: #666; line-height: 1.5; }
-      .header { border-bottom: 1px solid #e5e5e5; padding: 20px 0; background: white; position: sticky; top: 0; z-index: 100; }
-      .logo { font-size: 20px; font-weight: 700; color: #000; }
-      .logout-btn { padding: 8px 16px; border: 1px solid #ddd; border-radius: 6px; background: white; cursor: pointer; font-size: 14px; font-weight: 500; }
-      .logout-btn:hover { border-color: #999; }
+      .product-info { padding: 16px; display: flex; flex-direction: column; }
+      .product-name { font-size: 13px; font-weight: 600; color: #000; margin-bottom: 4px; letter-spacing: 0.3px; }
+      .product-component { font-size: 13px; color: #666; margin-bottom: 12px; }
+      .product-meta { font-size: 12px; color: #999; line-height: 1.6; }
+      .header { border-bottom: 1px solid #e0e0e0; padding: 18px 0; background: white; position: sticky; top: 0; z-index: 100; }
+      .logo { font-size: 16px; font-weight: 600; color: #000; letter-spacing: 0.5px; }
+      .logout-btn { padding: 7px 14px; border: 1px solid #e0e0e0; border-radius: 4px; background: white; cursor: pointer; font-size: 13px; font-weight: 500; transition: all 0.15s; }
+      .logout-btn:hover { border-color: #999; background: #fafafa; }
       .login-container { min-height: 100vh; display: flex; align-items: center; justify-content: center; background: #fafafa; }
-      .login-box { background: white; padding: 48px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); max-width: 400px; width: 100%; }
-      .login-input { width: 100%; padding: 12px 16px; border: 1px solid #ddd; border-radius: 6px; font-size: 15px; margin-bottom: 16px; }
-      .login-btn { width: 100%; padding: 12px; background: #000; color: white; border: none; border-radius: 6px; font-size: 15px; font-weight: 600; cursor: pointer; }
+      .login-box { background: white; padding: 48px; border-radius: 4px; box-shadow: 0 1px 3px rgba(0,0,0,0.08); max-width: 400px; width: 100%; }
+      .login-input { width: 100%; padding: 12px 14px; border: 1px solid #e0e0e0; border-radius: 4px; font-size: 14px; margin-bottom: 16px; font-family: inherit; }
+      .login-input:focus { outline: none; border-color: #999; }
+      .login-btn { width: 100%; padding: 12px; background: #000; color: white; border: none; border-radius: 4px; font-size: 14px; font-weight: 500; cursor: pointer; transition: background 0.15s; }
       .login-btn:hover { background: #333; }
-      .results-count { font-size: 14px; color: #666; margin-bottom: 24px; }
-      .clear-filters-btn { width: 100%; padding: 10px; border: 1px solid #ddd; border-radius: 6px; background: white; cursor: pointer; font-size: 13px; font-weight: 500; margin-bottom: 24px; color: #666; }
-      .clear-filters-btn:hover { border-color: #999; color: #000; }
-      .refresh-btn { padding: 8px 16px; border: 1px solid #ddd; border-radius: 6px; background: white; cursor: pointer; font-size: 14px; font-weight: 500; margin-left: 12px; }
-      .refresh-btn:hover { border-color: #999; }
+      .results-count { font-size: 13px; color: #999; margin-bottom: 20px; font-weight: 500; }
+      .clear-filters-btn { width: 100%; padding: 9px; border: 1px solid #e0e0e0; border-radius: 4px; background: white; cursor: pointer; font-size: 12px; font-weight: 500; margin-bottom: 20px; color: #666; transition: all 0.15s; }
+      .clear-filters-btn:hover { border-color: #999; background: #fafafa; color: #000; }
+      .refresh-btn { padding: 7px 14px; border: 1px solid #e0e0e0; border-radius: 4px; background: white; cursor: pointer; font-size: 13px; font-weight: 500; margin-left: 10px; transition: all 0.15s; }
+      .refresh-btn:hover { border-color: #999; background: #fafafa; }
     </style>
 </head>
 <body>
