--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       .product-card:hover { background-color: #fafafa; }
       .product-image { 
         height: 250px; 
-        background: white; 
+        background: #fafafa; 
         display: flex; 
         align-items: center; 
         justify-content: center; 
