--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
       .logo { font-size: 16px; font-weight: 600; color: #000; letter-spacing: 0.5px; }
       .logout-btn { padding: 7px 14px; border: 1px solid #e0e0e0; border-radius: 4px; background: white; cursor: pointer; font-size: 13px; font-weight: 500; transition: all 0.15s; }
       .logout-btn:hover { border-color: #999; background: #fafafa; }
-      .login-container { min-height: 100vh; display: flex; align-items: center; justify-content: center; background: #fafafa; }
-      .login-box { background: white; padding: 48px; border-radius: 4px; box-shadow: 0 1px 3px rgba(0,0,0,0.08); max-width: 400px; width: 100%; }
+      .login-container { min-height: 100vh; display: flex; align-items: center; justify-content: center; background: white; }
+      .login-box { background: white; padding: 48px; border: 1px solid #e0e0e0; border-radius: 4px; max-width: 400px; width: 100%; }
       .login-input { width: 100%; padding: 12px 14px; border: 1px solid #e0e0e0; border-radius: 4px; font-size: 14px; margin-bottom: 16px; font-family: inherit; }
       .login-input:focus { outline: none; border-color: #999; }
       .login-btn { width: 100%; padding: 12px; background: #000; color: white; border: none; border-radius: 4px; font-size: 14px; font-weight: 500; cursor: pointer; transition: background 0.15s; }
