--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
         border-bottom: 1px solid #e0e0e0;
         transition: background-color 0.15s;
         cursor: pointer;
+        background: white;
       }
-      .product-card:hover { background-color: #fafafa; }
+      .product-card:hover { background-color: #f8f8f8; }
       .product-image { 
         height: 250px; 
         background: white; 
