--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
+      html { background: #fff; }
       body { 
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif; 
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
-        background: white;
+        background: #fff;
       }
       .container { max-width: 1400px; margin: 0 auto; padding: 0 24px; }
       .sidebar { width: 220px; flex-shrink: 0; }
@@ -31,12 +32,12 @@
         border-bottom: 1px solid #e0e0e0;
         transition: background-color 0.15s;
         cursor: pointer;
-        background: white;
+        background: #fff;
       }
       .product-card:hover { background-color: #f8f8f8; }
       .product-image { 
         height: 250px; 
-        background: white; 
+        background: #fff; 
         display: flex; 
         align-items: center; 
         justify-content: center; 
@@ -64,18 +65,18 @@
       .product-name { font-size: 13px; font-weight: 600; color: #000; margin-bottom: 4px; letter-spacing: 0.3px; }
       .product-component { font-size: 13px; color: #666; margin-bottom: 12px; }
       .product-meta { font-size: 12px; color: #999; line-height: 1.6; }
-      .header { border-bottom: 1px solid #e0e0e0; padding: 18px 0; background: white; position: sticky; top: 0; z-index: 100; }
+      .header { border-bottom: 1px solid #e0e0e0; padding: 18px 0; background: #fff; position: sticky; top: 0; z-index: 100; }
       .logo { font-size: 16px; font-weight: 600; color: #000; letter-spacing: 0.5px; }
-      .logout-btn { padding: 7px 14px; border: 1px solid #e0e0e0; border-radius: 4px; background: white; cursor: pointer; font-size: 13px; font-weight: 500; transition: all 0.15s; }
+      .logout-btn { padding: 7px 14px; border: 1px solid #e0e0e0; border-radius: 4px; background: #fff; cursor: pointer; font-size: 13px; font-weight: 500; transition: all 0.15s; }
       .logout-btn:hover { border-color: #999; background: #fafafa; }
-      .login-container { min-height: 100vh; display: flex; align-items: center; justify-content: center; background: white; }
-      .login-box { background: white; padding: 48px; border: 1px solid #e0e0e0; border-radius: 4px; max-width: 400px; width: 100%; }
+      .login-container { min-height: 100vh; display: flex; align-items: center; justify-content: center; background: #fff; }
+      .login-box { background: #fff; padding: 48px; border: 1px solid #e0e0e0; border-radius: 4px; max-width: 400px; width: 100%; }
       .login-input { width: 100%; padding: 12px 14px; border: 1px solid #e0e0e0; border-radius: 4px; font-size: 14px; margin-bottom: 16px; font-family: inherit; }
       .login-input:focus { outline: none; border-color: #999; }
       .login-btn { width: 100%; padding: 12px; background: #000; color: white; border: none; border-radius: 4px; font-size: 14px; font-weight: 500; cursor: pointer; transition: background 0.15s; }
       .login-btn:hover { background: #333; }
       .results-count { font-size: 13px; color: #999; margin-bottom: 20px; font-weight: 500; }
-      .clear-filters-btn { width: 100%; padding: 9px; border: 1px solid #e0e0e0; border-radius: 4px; background: white; cursor: pointer; font-size: 12px; font-weight: 500; margin-bottom: 20px; color: #666; transition: all 0.15s; }
+      .clear-filters-btn { width: 100%; padding: 9px; border: 1px solid #e0e0e0; border-radius: 4px; background: #fff; cursor: pointer; font-size: 12px; font-weight: 500; margin-bottom: 20px; color: #666; transition: all 0.15s; }
       .clear-filters-btn:hover { border-color: #999; background: #fafafa; color: #000; }
       .refresh-btn { padding: 7px 14px; border: 1px solid #e0e0e0; border-radius: 4px; background: white; cursor: pointer; font-size: 13px; font-weight: 500; margin-left: 10px; transition: all 0.15s; }
       .refresh-btn:hover { border-color: #999; background: #fafafa; }
@@ -273,7 +274,7 @@
 
           if (!isAuthenticated) {
             return (
-              <div className="login-container" style={{ background: 'white' }}>
+              <div className="login-container" style={{ background: '#fff' }}>
                 <div className="login-box">
                   <h2 className="logo" style={{ marginBottom: '32px' }}>Packaging Catalog</h2>
                   <input 
@@ -293,7 +294,7 @@
 
           if (loading) {
             return (
-              <div style={{ minHeight: '100vh', display: 'flex', alignItems: 'center', justifyContent: 'center', background: 'white' }}>
+              <div style={{ minHeight: '100vh', display: 'flex', alignItems: 'center', justifyContent: 'center', background: '#fff' }}>
                 <div style={{ textAlign: 'center', color: '#666' }}>Loading...</div>
               </div>
             );
