--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
-      html { background: #fff; }
+      html, body, #root { background: #ffffff !important; }
       body { 
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif; 
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
-        background: #fff;
+        background: #ffffff;
       }
       .container { max-width: 1400px; margin: 0 auto; padding: 0 24px; }
       .sidebar { width: 220px; flex-shrink: 0; }
@@ -78,7 +78,7 @@
       .results-count { font-size: 13px; color: #999; margin-bottom: 20px; font-weight: 500; }
       .clear-filters-btn { width: 100%; padding: 9px; border: 1px solid #e0e0e0; border-radius: 4px; background: #fff; cursor: pointer; font-size: 12px; font-weight: 500; margin-bottom: 20px; color: #666; transition: all 0.15s; }
       .clear-filters-btn:hover { border-color: #999; background: #fafafa; color: #000; }
-      .refresh-btn { padding: 7px 14px; border: 1px solid #e0e0e0; border-radius: 4px; background: white; cursor: pointer; font-size: 13px; font-weight: 500; margin-left: 10px; transition: all 0.15s; }
+      .refresh-btn { padding: 7px 14px; border: 1px solid #e0e0e0; border-radius: 4px; background: #fff; cursor: pointer; font-size: 13px; font-weight: 500; margin-left: 10px; transition: all 0.15s; }
       .refresh-btn:hover { border-color: #999; background: #fafafa; }
     </style>
 </head>
