--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       .dark-mode .dark-mode-toggle { background: #222; border-color: #333; color: #ccc; }
       .dark-mode .dark-mode-toggle:hover { background: #2a2a2a; border-color: #444; color: #fff; }
       
-      .container { max-width: 1400px; margin: 0 auto; padding: 0 24px; }
+      .container { max-width: 100%; margin: 0 auto; padding: 0 24px; }
       .sidebar { width: 220px; flex-shrink: 0; }
       .sidebar-content { position: sticky; top: 100px; max-height: calc(100vh - 120px); overflow-y: auto; padding-right: 8px; }
       .sidebar-content::-webkit-scrollbar { width: 6px; }
