--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
       .dark-mode .logo { color: #fff; }
       .dark-mode .product-card { background: #1a1a1a; border-right-color: #333; border-bottom-color: #333; }
       .dark-mode .product-card:hover { background-color: #222; }
-      .dark-mode .product-image { background: #1a1a1a; }
+      .dark-mode .product-image { background: #fff; }
+      .dark-mode .product-info { background: #1a1a1a; }
       .dark-mode .product-name { color: #fff; }
       .dark-mode .product-component { color: #ccc; }
       .dark-mode .product-meta { color: #999; }
