--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
             return (
               <div className="login-container" style={{ background: '#fff' }}>
                 <div className="login-box">
-                  <h2 className="logo" style={{ marginBottom: '32px' }}>Packaging Catalog</h2>
+                  <h2 className="logo" style={{ marginBottom: '32px' }}>Kumalog</h2>
                   <input 
                     type="password" 
                     value={password} 
