--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kumalog</title>
+    <title>Packaging Catalog</title>
     <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
@@ -25,6 +25,7 @@
       .dark-mode .container { background: #1a1a1a; }
       .dark-mode .header { background: #1a1a1a; border-bottom-color: #333; }
       .dark-mode .logo { color: #fff; }
+      .dark-mode .logo img { filter: brightness(0) invert(1); } /* Inverts logo colors for dark mode */
       .dark-mode .product-card { background: #1a1a1a; border-right-color: #333; border-bottom-color: #333; }
       .dark-mode .product-card:hover { background-color: #222; }
       .dark-mode .product-image { background: #fff; }
@@ -118,7 +119,10 @@
       .product-component { font-size: 13px; color: #666; margin-bottom: 12px; }
       .product-meta { font-size: 12px; color: #999; line-height: 1.6; }
       .header { border-bottom: 1px solid #e0e0e0; padding: 18px 0; background: #fff; position: sticky; top: 0; z-index: 100; }
-      .logo { font-size: 16px; font-weight: 600; color: #000; letter-spacing: 0.5px; }
+      .logo { font-size: 16px; font-weight: 600; color: #000; letter-spacing: 0.5px; display: flex; align-items: center; gap: 12px; }
+      .logo img { height: 32px; width: auto; }
+      .logo-login { display: flex; justify-content: center; margin-bottom: 24px; }
+      .logo-login img { height: 48px; width: auto; }
       .logout-btn { padding: 7px 14px; border: 1px solid #e0e0e0; border-radius: 4px; background: #fff; cursor: pointer; font-size: 13px; font-weight: 500; transition: all 0.15s; }
       .logout-btn:hover { border-color: #999; background: #fafafa; }
       .login-container { min-height: 100vh; display: flex; align-items: center; justify-content: center; background: #fff; }
@@ -150,7 +154,9 @@
           IMAGE_EXTENSION: '.png',
           FACTORY_FOLDERS: {
             'Taesung': 'taesung',
-          }
+          },
+          // Add your logo URL here (can be from GitHub or any image URL)
+          LOGO_URL: 'https://raw.githubusercontent.com/josephkimkuma/packaging_catalog/main/logo.png'
         };
         // ============================================
         
@@ -346,7 +352,14 @@
             return (
               <div className="login-container" style={{ background: '#fff' }}>
                 <div className="login-box">
-                  <h2 className="logo" style={{ marginBottom: '32px' }}>Kumalog</h2>
+                  {CONFIG.LOGO_URL && (
+                    <div className="logo-login">
+                      <img src={CONFIG.LOGO_URL} alt="Logo" />
+                    </div>
+                  )}
+                  <h2 className="logo" style={{ marginBottom: '32px', justifyContent: 'center' }}>
+                    {!CONFIG.LOGO_URL && 'Packaging Catalog'}
+                  </h2>
                   <input 
                     type="password" 
                     value={password} 
@@ -374,7 +387,10 @@
             <div style={{ background: '#fafafa', minHeight: '100vh' }}>
               <div className="header">
                 <div className="container" style={{ display: 'flex', alignItems: 'center', justifyContent: 'space-between' }}>
-                  <div className="logo">Packaging Catalog</div>
+                  <div className="logo">
+                    {CONFIG.LOGO_URL && <img src={CONFIG.LOGO_URL} alt="Logo" />}
+                    Packaging Catalog
+                  </div>
                   <div style={{ display: 'flex', gap: '12px' }}>
                     <button onClick={toggleDarkMode} className="dark-mode-toggle">
                       {darkMode ? '☀️ Light' : '🌙 Dark'}
