--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Packaging Catalog</title>
+    <title>Kumalog</title>
     <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
@@ -25,7 +25,8 @@
       .dark-mode .container { background: #1a1a1a; }
       .dark-mode .header { background: #1a1a1a; border-bottom-color: #333; }
       .dark-mode .logo { color: #fff; }
-      .dark-mode .logo img { filter: brightness(0) invert(1); } /* Inverts logo colors for dark mode */
+      .dark-mode .logo img { filter: brightness(0) invert(1); mix-blend-mode: normal; } /* Inverts logo colors for dark mode */
+      .dark-mode .logo-login img { filter: brightness(0) invert(1); mix-blend-mode: normal; }
       .dark-mode .product-card { background: #1a1a1a; border-right-color: #333; border-bottom-color: #333; }
       .dark-mode .product-card:hover { background-color: #222; }
       .dark-mode .product-image { background: #fff; }
@@ -120,9 +121,9 @@
       .product-meta { font-size: 12px; color: #999; line-height: 1.6; }
       .header { border-bottom: 1px solid #e0e0e0; padding: 18px 0; background: #fff; position: sticky; top: 0; z-index: 100; }
       .logo { font-size: 16px; font-weight: 600; color: #000; letter-spacing: 0.5px; display: flex; align-items: center; gap: 12px; }
-      .logo img { height: 32px; width: auto; }
+      .logo img { height: 32px; width: auto; mix-blend-mode: multiply; }
       .logo-login { display: flex; justify-content: center; margin-bottom: 24px; }
-      .logo-login img { height: 48px; width: auto; }
+      .logo-login img { height: 48px; width: auto; mix-blend-mode: multiply; }
       .logout-btn { padding: 7px 14px; border: 1px solid #e0e0e0; border-radius: 4px; background: #fff; cursor: pointer; font-size: 13px; font-weight: 500; transition: all 0.15s; }
       .logout-btn:hover { border-color: #999; background: #fafafa; }
       .login-container { min-height: 100vh; display: flex; align-items: center; justify-content: center; background: #fff; }
@@ -156,7 +157,7 @@
             'Taesung': 'taesung',
           },
           // Add your logo URL here (can be from GitHub or any image URL)
-          LOGO_URL: 'https://raw.githubusercontent.com/josephkimkuma/packaging_catalog/main/logo.png'
+          LOGO_URL: 'https://raw.githubusercontent.com/josephkimkuma/packaging_catalog/main/logo.png',
         };
         // ============================================
         
@@ -358,7 +359,7 @@
                     </div>
                   )}
                   <h2 className="logo" style={{ marginBottom: '32px', justifyContent: 'center' }}>
-                    {!CONFIG.LOGO_URL && 'Packaging Catalog'}
+                    {!CONFIG.LOGO_URL && 'Kumalog'}
                   </h2>
                   <input 
                     type="password" 
@@ -389,7 +390,7 @@
                 <div className="container" style={{ display: 'flex', alignItems: 'center', justifyContent: 'space-between' }}>
                   <div className="logo">
                     {CONFIG.LOGO_URL && <img src={CONFIG.LOGO_URL} alt="Logo" />}
-                    Packaging Catalog
+                    Kumalog
                   </div>
                   <div style={{ display: 'flex', gap: '12px' }}>
                     <button onClick={toggleDarkMode} className="dark-mode-toggle">
