--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500&display=swap" rel="stylesheet">
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
       html, body, #root { background: #ffffff !important; }
@@ -118,7 +119,7 @@
       .product-info { padding: 16px; display: flex; flex-direction: column; }
       .product-name { font-size: 13px; font-weight: 600; color: #000; margin-bottom: 4px; letter-spacing: 0.3px; }
       .product-component { font-size: 13px; color: #666; margin-bottom: 12px; }
-      .product-meta { font-size: 12px; color: #999; line-height: 1.6; }
+      .product-meta { font-size: 12px; color: #999; line-height: 1.6; font-family: 'IBM Plex Mono', monospace; }
       .header { border-bottom: 1px solid #e0e0e0; padding: 18px 0; background: #fff; position: sticky; top: 0; z-index: 100; }
       .logo { font-size: 16px; font-weight: 600; color: #000; letter-spacing: 0.5px; display: flex; align-items: center; gap: 12px; }
       .logo img { height: 32px; width: auto; mix-blend-mode: multiply; }
