--- a/index.html
+++ b/index.html
@@ -159,11 +159,13 @@
           IMAGE_EXTENSION: '.png',
           FACTORY_FOLDERS: {
             'Taesung': 'taesung',
+            'Kugil': 'kugil',
+            'MYC': 'myc',
           },
           // Add your logo URL here (can be from GitHub or any image URL)
           LOGO_URL: 'https://raw.githubusercontent.com/josephkimkuma/packaging_catalog/main/logo.png',
           // Sheet names/tabs to load (add all your factory sheet names here)
-          SHEET_NAMES: ['Taesung'], // Example: ['Taesung', 'Factory B', 'Factory C']
+          SHEET_NAMES: ['Taesung', 'Kugil', 'MYC'], // Example: ['Taesung', 'Factory B', 'Factory C']
         };
         // ============================================
         
